@@ -19,4 +19,25 @@
         <module>psi</module>
         <module>malicious</module>
     </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <!-- Leaf protocol modules are four levels below repo root (e.g. protocols/balanced/gmr21). -->
+                        <argLine>--add-modules=jdk.incubator.vector -Djava.library.path=${env.MPC4J_NATIVE_TOOL_DIR}:${project.basedir}/../../../../mpc4j-native-tool/cmake-build-release:${env.MPC4J_NATIVE_FHE_DIR}:${project.basedir}/../../../../mpc4j-native-fhe/cmake-build-release</argLine>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
